--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -135,12 +135,13 @@
                         />
 
                     <TextView
+                        android:id="@+id/token"
                         android:textAlignment="center"
                         android:gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="wrap_content"
                         android:hint="FKT001"
-                        android:textSize="64sp"/>
+                        android:textSize="56sp"/>
 
                     <TextView
                         android:textSize="16sp"
@@ -193,6 +194,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <LinearLayout
+                android:visibility="gone"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
